fixed Task2, but get method working incorrectly